@@ -1082,6 +1082,35 @@ sub padSnmpMacAddress {
 }
 
 
+sub cleanXml {
+  my ($self,$content) = @_;
+
+  my $clean_content;
+
+  # To avoid strange breakage I remove the unprintable characters in the XML
+  foreach (split "\n", $content) {
+    if (! m/\A(
+    [\x09\x0A\x0D\x20-\x7E]            # ASCII
+    | [\xC2-\xDF][\x80-\xBF]             # non-overlong 2-byte
+    |  \xE0[\xA0-\xBF][\x80-\xBF]        # excluding overlongs
+    | [\xE1-\xEC\xEE\xEF][\x80-\xBF]{2}  # straight 3-byte
+    |  \xED[\x80-\x9F][\x80-\xBF]        # excluding surrogates
+    |  \xF0[\x90-\xBF][\x80-\xBF]{2}     # planes 1-3
+    | [\xF1-\xF3][\x80-\xBF]{3}          # planes 4-15
+    |  \xF4[\x80-\x8F][\x80-\xBF]{2}     # plane 16
+    )*\z/x) {
+      s/[[:cntrl:]]//g;
+      $self->{logger}->debug("non utf-8 '".$_."'");
+    }
+
+    # Is that a good idea. Intent to drop some nasty char
+    # s/[A-z0-9_\-<>\/:\.,#\ \?="'\(\)]//g;
+    $clean_content .= $_."\n";
+  }
+
+  return $clean_content;
+}
+
 ### Generic shared subroutines #####
 
 sub can_run {
