@@ -107,31 +107,8 @@ sub getContent {
 
     my $content = XMLout( $self->{xmlroot}, RootName => 'REQUEST', XMLDecl => '<?xml version="1.0" encoding="UTF-8"?>', SuppressEmpty => undef );
 
-    my $clean_content;
-
-    # To avoid strange breakage I remove the unprintable caractere in the XML
-    foreach (split "\n", $content) {
-#      s/[[:cntrl:]]//g;
-      if (! m/\A(
-        [\x09\x0A\x0D\x20-\x7E]            # ASCII
-        | [\xC2-\xDF][\x80-\xBF]             # non-overlong 2-byte
-        |  \xE0[\xA0-\xBF][\x80-\xBF]        # excluding overlongs
-        | [\xE1-\xEC\xEE\xEF][\x80-\xBF]{2}  # straight 3-byte
-        |  \xED[\x80-\x9F][\x80-\xBF]        # excluding surrogates
-        |  \xF0[\x90-\xBF][\x80-\xBF]{2}     # planes 1-3
-        | [\xF1-\xF3][\x80-\xBF]{3}          # planes 4-15
-        |  \xF4[\x80-\x8F][\x80-\xBF]{2}     # plane 16
-        )*\z/x) {
-        s/[[:cntrl:]]//g;
-        $logger->debug("non utf-8 '".$_."'");
-      }
-
-        s/\r|\n//g;
-
-        # Is that a good idea. Intent to drop some nasty char
-        # s/[A-z0-9_\-<>\/:\.,#\ \?="'\(\)]//g;
-        $clean_content .= $_."\n";
-    }
+    #Cleaning XML to delete unprintable characters
+    my $clean_content=$common->cleanXml($content);
 
     #Cleaning xmltags content after adding it o inventory
     $common->flushXMLTags();
